labs/lab2/testsuite/good/subtyping/div_double_lhs.cc
int main() {
  printDouble(1.0 / 2);
  return 0;
}
