labs/lab2/testsuite/bad/no_main.cc
int not_main() {
  return 0;
}
